// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite_config > basic: reads fmt field from vite.config.ts 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/basic
exit code: 1
--- STDOUT ---------
Checking formatting...

test.ts (<variable>ms)

Format issues found in above 1 files. Run without \`--check\` to fix.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`vite_config > error: explicit --config vite.config.ts without fmt field 1`] = `
"--------------------
arguments: --check --config vite.config.ts test.ts
working directory: vite_config/fixtures/error_no_fmt_field
exit code: 1
--- STDOUT ---------

--- STDERR ---------
Failed to load configuration file.
Expected a \`fmt\` field in the default export of <cwd>/vite.config.ts
--------------------"
`;

exports[`vite_config > priority: oxfmt.config.ts takes precedence over vite.config.ts 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/priority
exit code: 1
--- STDOUT ---------
Checking formatting...

test.ts (<variable>ms)

Format issues found in above 1 files. Run without \`--check\` to fix.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`vite_config > skip: auto-discovered vite.config.ts with function export uses defaults 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/skip_fn_export
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`vite_config > skip: auto-discovered vite.config.ts without fmt field uses defaults 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/error_no_fmt_field
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`vite_config > skip: parent config is found when vite.config.ts without fmt is skipped 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/skip_finds_parent/child
exit code: 1
--- STDOUT ---------
Checking formatting...

test.ts (<variable>ms)

Format issues found in above 1 files. Run without \`--check\` to fix.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;
